testing/tests/melt/negative/stmt_type_switch_1.c
struct foo { } bar;

void f() {

  switch(&bar) {} // `integer`

}
